# lab5_shell

./: CMakeLists.txt  readme.md  script.sh
cmake/: FindReadline.cmake
data/: script.msh  text.txt
examples/: paths.cpp  pipe_ls_wc.cpp  pipes.cpp  regex_matching.cpp
mycat/: CMakeLists.txt
mycat/src/: cat.cpp  cat.h  main.cpp
myshell/include/: myshell_commands.h  myshell_exceptions.h  myshell_exit_codes.h  options_parser.h
myshell/include/builtin_parsers/: builtin_parser.h  dot_parser.h  mcd_parser.h  mecho_parser.h  merrno_parser.h  mexit_parser.h  mexport_parser.h  mpwd_parser.h
myshell/src/: main.cpp  myshell_commands.cpp  options_parser.cpp
myshell/src/builtin_parsers/: builtin_parser.cpp  dot_parser.cpp  mcd_parser.cpp  mecho_parser.cpp  merrno_parser.cpp  mexit_parser.cpp  mexport_parser.cpp  mpwd_parser.cpp
